--- a/markup-exercise.html
+++ b/markup-exercise.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>Hello, world!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
+
 <body>
-  <h1>A Brief History of HTML</h1>
-  <h2>The history of hypertext markup language is a strange and interesting tale. From its simple start as an online subs
+  <h1 class="main-headings">A Brief History of HTML</h1>
+  <h2>The history of hypertext markup language is a strange and interesting tale. From its simple start as an online
+    subset of SGML through political maneuverings of the huge browser companies to its current piecemeal – but growing –
+    compatibility, the language has weathered a storm of growth, abuse, and innovation.</h2>
+  <p>Recently, the battle for control of the standard has focused on functionality. Microsoft and Netscape are both
+    touting W3C compliance as a crucial marketing advantage. And the work being done on the latest HTML draft shows
+    there may be light at the end of the tunnel. But it wasn't always this rosy The idea behind HTML was a modest one.
+    When Tim Berners-Lee was putting together his first elementary browsing and authoring system for the Web, he created
+    a quick little hypertext language that would serve his purposes. He imagined dozens, or even hundreds, of hypertext
+    formats in the future, and smart clients that could easily negotiate and translate documents from servers across the
+    Net. It would be a system similar to Claris XTND on the Macintosh, but would work on any platform and browser. The
+    problem, however, turned out to be in the simplicity of Berners-Lee's language. Since it was text-based, you could
+    use any editor or word processor to create or convert documents for the Web. And there was just a handful of tags –
+    anyone could master HTML in an afternoon. The Web flourished. Everyone started publishing. The rest is history. But
+    as more and more content moved to the Web, those creating browsers realized the simple markup language needed much
+    improvement. How should the innovation take place? Tim Berners-Lee certainly wasn't going to be the sole developer
+    of HTML – he never intended to be. So the developers, in the long-held tradition of the Internet, implemented new
+    features in their browsers and then shipped them. If the Web community liked them, they stayed. If not, they were
+    removed. Here's a brief list of deprecated HTML tags: applet basefront center dir font strike add some words here to
+    test the audio and then we can add this here to try some more audio words for the recording</p>
+   
+
+    <ol>
+      <li>The paragraph tag</li>
+      <li>The bold text tag</li>
+      <li>The italic text tag</li>
+      <li>The heading tags</li>
+      <li>The link tag</li>
+      <li>The item tag</li>
+ </ol>
+
 </body>
-<p>Recently, the battle for control of the standard has focused on functionality. Microsoft and Netscape are both touting W3C compliance as a crucial marketing advantage. And the work being done on the latest HTML draft shows there may be light at the end of the tunnel. But it wasn't always this rosy The idea behind HTML was a modest one. When Tim Berners-Lee was putting together his first elementary browsing and authoring system for the Web, he created a quick little hypertext language that would serve his purposes. He imagined dozens, or even hundreds, of hypertext formats in the future, and smart clients that could easily negotiate and translate documents from servers across the Net. It would be a system similar to Claris XTND on the Macintosh, but would work on any platform and browser. The problem, however, turned out to be in the simplicity of Berners-Lee's language. Since it was text-based, you could use any editor or word processor to create or convert documents for the Web. And there was just a handful of tags – anyone could master HTML in an afternoon. The Web flourished. Everyone started publishing. The rest is history. But as more and more content moved to the Web, those creating browsers realized the simple markup language needed much improvement. How should the innovation take place? Tim Berners-Lee certainly wasn't going to be the sole developer of HTML – he never intended to be. So the developers, in the long-held tradition of the Internet, implemented new features in their browsers and then shipped them. If the Web community liked them, they stayed. If not, they were removed. Here's a brief list of deprecated HTML tags: applet basefront center dir font strike add some words here to test the audio and then we can add this here to try some more audio words for the recording</p>
+<style>
+  p {
+    color: black;
+    line-height: normal;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 500px;
+    list-style-type: decimal;
+    list-style-position: inside;
+
+  } 
+  
+  .main-headings{color:blue; }
+  
+</style>
 </html>
